--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "koishi-plugin-nailong-monetary",
-  "description": "Monetary System for nailon gbot",
-  "version": "0.1.7",
+  "description": "集成支付网页的货币插件",
+  "version": "1.0.5",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
     "lib",
-    "src"
+    "dist",
+    "client"
   ],
   "author": "ziyi233",
   "license": "MIT",
@@ -21,7 +22,7 @@
   "koishi": {
     "description": {
       "en": "Monetary System for nailong bot",
-      "zh": "奶龙bot自用货币系统，给monetary表增加了userId，可以在指令管理指定不同指令使用的货币类型，扣费后会输出货币余额。"
+      "zh": "集成支付网页的货币插件"
     },
     "service": {
       "implements": [
@@ -31,9 +32,11 @@
         "database"
       ],
       "optional": [
-        "profile"
+        "profile",
+        "console"
       ]
-    }
+    },
+    "browser": true
   },
   "keywords": [
     "bot",
@@ -48,14 +51,24 @@
     "system",
     "service"
   ],
+  "dependencies": {
+    "@koa/router": "^12.0.1",
+    "koa": "^2.15.3",
+    "koa-body": "^6.0.1"
+  },
   "peerDependencies": {
-    "koishi": "^4.15.3"
+    "@koishijs/plugin-console": "^5.30.0",
+    "koishi": "^4.18.0"
   },
   "devDependencies": {
+    "@koishijs/client": "^5.30.0",
+    "@koishijs/plugin-console": "^5.30.0",
     "@koishijs/plugin-help": "^2.3.3",
+    "@types/koa": "^2.15.0",
+    "@types/koa__router": "^12.0.4",
     "@types/node": "^20.8.9",
     "atsc": "^1.2.2",
-    "koishi": "^4.15.3",
+    "koishi": "^4.18.0",
     "koishi-plugin-profile": "^1.0.3",
     "koishi-plugin-rate-limit": "^2.0.0",
     "typescript": "^5.2.2"
